<resources>
    <string name="app_name">LegaSist - Lucro Certo</string>


    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo Lucro Certo</b><br>
Versao %s<br><br>
<a href="http://www.legasist.com.br">http://legasist.com.br</a><br><br>
<a href="http://www.facebook.com/legasist">http://facebook.com/legasist</a><br><br>
	]]>
	</string>
    <string name="about_dialog_title">LegaSist</string>
    <string name="Atualizar">Atualizar</string>
    <string name="action_video_browser">Browser</string>
    <string name="action_video_player">Vídeo Player</string>
    <string name="action_video_view">Vídeo View</string>

    <!-- C -->
    <string name="carros">Carros</string>
    <string name="configuracoes">Configurações</string>
    <string name="classicos">Clássicos</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="error_conexao_indisponivel">Conexão Indisponível. Verifique seu Wi-Fi ou 3G.</string>

    <!-- L -->
    <string name="luxo">Luxo</string>
    <string name="latitudeLongitude">Lat / Lng</string>

    <!-- M -->
    <string name="mapa">Mapa</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
    <string name="msg_error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>

    <!-- N -->
    <string name="nav_drawer_username">LegaSist - Lucro Certo</string>
    <string name="nav_drawer_email">legasist.apps@gmail.com</string>


    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="share">Share</string>
    <string name="sobre">Sobre</string>
    <string name="site_do_sistema">Site do Sistema</string>

    <!-- V -->
    <string name="vazio" />
    <string name="video">Vídeo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- menu_frag_mapa.xml -->
    <string name="mapa_normal">Modo Normal</string>
    <string name="mapa_satelite">Modo Satélite</string>
    <string name="mapa_terreno">Modo terreno</string>
    <string name="mapa_hibrido">Modo Híbrido</string>
    <string name="mapa_location_directions">Direções</string>
    <string name="mapa_location_carro">Localização do carro</string>
    <string name="mapa_zoom_in">Zoom (+)</string>
    <string name="mapa_zoom_out">Zoom (-)</string>

    <string name="selecione_o_estado">Selecione o estado</string>
    <string name="selecione_a_categoria">Selecione a categoria</string>
    <string name="selecione_o_fornecedor">Selecione o fornecedor</string>
    <string name="digite_o_cliente">Digite o cliente</string>
    <string name="nao_ha_categoria">Não há categoria cadastrada</string>
    <string name="nao_ha_fornecedor">Não há fornecedor cadastrado</string>
    <string name="nao_ha_cliente">Não há cliente cadastrado</string>

    <string name="fechar_janela">Fechar</string>
    <string name="categorias">Categorias</string>
    <string name="categoria">Categoria</string>


    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>

    <string name="clientes">Clientes</string>
    <string name="nomecli">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="uf">Estado</string>
    <string name="celular">Celular</string>
    <string name="email">E-mail</string>

    <string name="estoque_atual">Estoque atual</string>
    <string name="estoque_min">Estoque mínimo</string>
    <string name="preco_custo">Preço custo</string>
    <string name="preco_venda">Preço venda</string>
    <string name="codigo_barras">Código de barras/Referência</string>
    <string name="fornecedor">Fornecedor</string>
    <string name="nome_prod">Nome</string>
    <string name="quant">Quant.</string>


    <string name="vendas">Vendas</string>
    <string name="areceber">A Receber</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="produtos">Produtos</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="nomeapp">Lucro Certo</string>

    <string name="action_novo_cliente">Novo Cliente</string>
    <string name="action_novo_produto">Novo Produto</string>
    <string name="action_novo_fornecedor">Novo Fornecedor</string>
    <string name="action_nova_venda">Nova Venda</string>

    <!--   Venda-->
    <string name="data">Data</string>
    <string name="cliente">Cliente</string>
    <string name="valor">Valor</string>
    <string name="desconto">Desconto</string>
    <string name="total">Total</string>

    <string name="mapa_location_cliente">Localização do cliente</string>

    <string name="mapa_location_fornecedor">Localização do fornecedor</string>

    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>


</resources>
