<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!-- Lista com todos os produtos -->
        <item
            android:id="@+id/nav_item_produtos_todos"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/produtos" />


        <!-- Lista com as categorias de produtos -->
        <item
            android:id="@+id/nav_item_categorias"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/categorias" />

        <!-- Lista com todos os clientes -->
        <item
            android:id="@+id/nav_item_clientes"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/clientes" />

        <!-- Lista com todos os fornecedores -->
        <item
            android:id="@+id/nav_item_fornecedores"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/fornecedor" />


        <!-- Lista com os carros de luxo -->
        <item
            android:id="@+id/nav_item_carros_luxo"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/luxo" />
        <!-- WebView com informações sobre o livro -->
        <item
            android:id="@+id/nav_item_site_livro"
            android:icon="@drawable/ic_drawer_site_livro"
            android:title="@string/site_do_livro" />
        <!-- Tela de configurações -->
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/configuracoes" />
    </group>
</menu>