<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <!-- Nome -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/nome_prod"
                    android:textSize="@dimen/size_texo_formulario"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textNomeProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Código de Barras -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/codigo_barras"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/textCodBarras"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:enabled="false"/>

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/btnCodBarrasProd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_action_search"
                        android:layout_gravity="right"
                        />

                </android.support.v7.widget.LinearLayoutCompat>

                <!-- Estoque atual -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/estoque_atual"
                    android:textSize="@dimen/size_texo_formulario"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textEstAtual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <!-- Estoque mínimo -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/estoque_min"
                    android:textSize="@dimen/size_texo_formulario"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textEstMinimo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <!-- Preço Custo -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/preco_custo"
                    android:textSize="@dimen/size_texo_formulario"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textPrecoCusto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <!-- Preço Venda -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/preco_venda"
                    android:textSize="@dimen/size_texo_formulario"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textPrecoVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>


                <!-- Categoria -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/categoria"
                    android:textSize="@dimen/size_texo_formulario"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/comboCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/selecione_a_categoria"
                    android:layout_margin="16dp" />

                <!-- Fornecedor -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/fornecedor"
                    android:textSize="@dimen/size_texo_formulario"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/comboFornecedores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/selecione_o_fornecedor"
                    android:layout_margin="16dp" />

                <!-- Foto do Produto -->
                <ImageView
                    android:layout_width="@dimen/img_carro_adapter_width"
                    android:layout_height="@dimen/img_carro_adapter_height"
                    android:id="@+id/imgProd"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"/>
                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btnFotoProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_video"
                    android:layout_gravity="center"
                    />


                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btnSalvarProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_cliente"
                    android:layout_gravity="center"
                    />


            </LinearLayout>

            <include layout="@layout/include_progress" />

        </android.support.v7.widget.CardView>


    </LinearLayout>
