<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <!-- Nome -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/nomecli"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textNomeCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Endereço -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/endereco"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textEnderecoCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Cidade -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/cidade"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textCidadeCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Estado -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/uf"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/comboEstados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/selecione_o_estado"
                    android:layout_margin="16dp" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btnLocalizacaoCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_location_found"
                    android:layout_gravity="center"

                    />

                <!-- Celular -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/celular"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textCelularCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- E-mail -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/top_margin_text_form"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textEmailCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btnSalvarCli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_cliente"
                    android:layout_gravity="center"
                    />


            </LinearLayout>

            <include layout="@layout/include_progress" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Lat -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tLatLng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:textSize="16sp" />

                <!-- Mapa -->
                <FrameLayout
                    android:id="@+id/mapCliFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="320dp"
                    android:layout_margin="16dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
