<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <!-- Data -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/data"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textDataVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>

                <!-- Cliente -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cliente"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/textClienteVenda"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:enabled="false"/>

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/btnBuscaCliente"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_action_search"
                        android:layout_gravity="right"
                        />

                </android.support.v7.widget.LinearLayoutCompat>

                <!-- Valor -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/valor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textValorVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <!-- Desconto -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/desconto"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textDescontoVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <!-- Total -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/total"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/textTotalVenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>


                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btnAdicionarProdCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_input_add"
                    android:layout_gravity="center"
                    />





                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btnSalvarVenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_cliente"
                    android:layout_gravity="center"
                    />


            </LinearLayout>

            <include layout="@layout/include_progress" />

        </android.support.v7.widget.CardView>


    </LinearLayout>
